<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment2">

    <Button
        android:id="@+id/bnToFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_to_first"
        app:layout_constraintBottom_toTopOf="@+id/bnToThird"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bnToThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_to_third"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnToFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>