...
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/nav_fragment3"
        android:name="com.example.bozhko_lab_3_5.Fragment3"
        android:label="Fragment 3"
        tools:layout="@layout/fragment3">
        <!--<action
            android:id="@+id/action_nav_fragment3_to_nav_fragment2"
            app:destination="@id/nav_fragment2"
            app:popUpTo="@id/nav_fragment2"
            app:popUpToInclusive="true" />-->
        <!--<action
...
    </fragment>

    <activity
        android:id="@+id/nav_about"
        android:name="com.example.bozhko_lab_3_5.AboutActivity"
        android:label="About Activity"
        tools:layout="@layout/activity_about" />

</navigation>
